# Akarin-SFML

./: .gitignore  CMakeLists.txt  README.md  akarin-sfml.sln  akarin-sfml.vcxproj  akarin-sfml.vcxproj.filters  akarin.cpp  akarin.h  akarin.hpp  akarin_math.cpp  akarin_math.hpp  akarin_matrix.hpp  build-akarin  build.sh  engine.cpp  engine.hpp  freetype.lib  main.cpp  main2.cpp  run  run.sh  test-code  vec3.h
header/: akarin.hpp  akarin_atom.hpp  akarin_map.hpp  akarin_math.hpp  akarin_matrix.hpp  test.hpp
include/: debugging_tools.h  ray.h
source/: akarin.cpp  akarin_atom.cpp  akarin_map.cpp  akarin_math.cpp  akarin_matrix.cpp  main.cpp  test.cpp
src/: engine.cpp  main.cpp  main2.cpp
